# LuxCubemapProcessor

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
src/: crc32.h  cubemap_bsp.cpp  cubemap_bsp.h  main.cpp  zip_handler.cpp  zip_handler.h
